--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gogoanime-clone",
+  "name": "pocoanime",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "node ./server/main.js",
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "node-html-parser": "^6.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sqlite3": "^5.1.6",
     "vite-express": "^0.9.1"
   },
   "devDependencies": {
